# p_hitblow

./: README.md  pyproject.toml  requirements.txt
src/hitblow/: cli.py  core.py  game.py  game_battle.py  game_eitanngo.py  game_eitanngobattle.py
src/hitblow/net/: protocol.py  websocket_client.py  websocket_server.py
src/hitblow/web/: app.py
src/hitblow/web/static/: index.html
tests/: test_core.py
