[project]
name = "hitblow"
version = "0.1.0"
description = "チームで育てる Hit & Blow ゲーム"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=16.1",
]

[project.scripts]
hitblow = "hitblow.cli:main"
hitblow-client = "hitblow.net.websocket_client:main"
hitblow-server = "hitblow.net.websocket_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hitblow"]

[dependency-groups]
dev = ["pytest>=8"]



